--- a/styles/main.css
+++ b/styles/main.css
@@ -18,12 +18,18 @@ hr.solid {
     font-size: 20px
 }
 .comfort-reason-title{
+    text-align: center;
     font-family: 'Tilt Warp', cursive;
     color: #fcd19d;
     -webkit-text-stroke: 2px;
     -webkit-text-stroke-color: black;
     padding:10px;
     text-shadow: 2px 2px 2px black;
+}
+.title-desc{
+    font-family: 'Roboto', sans-serif;
+    font-weight:600;
+    font-size: 19px;
 }
 
 @media screen and (max-width:800px) {
@@ -32,5 +38,8 @@ hr.solid {
     }    
     .carousel-item{
         margin-left: 0;
+    }
+    .title-desc{
+        font-size: 15px;
     }
 }
