--- a/styles/mommies.css
+++ b/styles/mommies.css
@@ -1,11 +1,41 @@
-.welcome-title{
-    font-family: Roboto;
-    font-weight: 700;
-    color: rgb(107, 64, 11);
-    margin-top: 10px;
-    text-shadow: -2px 2px 2px black;
+.page-title {
+    font-family: 'Tilt Warp', cursive;
+    color: #fcd19d;
+    -webkit-text-stroke: 2px;
+    -webkit-text-stroke-color: black;
+    text-shadow: 2px 2px 2px black;
 }
-
-.custom-bg{
-    background-color: #fcd19d;;
+.divider{
+    border: 2px solid #311b01;
+    width: 70px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.form-label{
+    font-size: 16px;
+    font-family: 'Tilt Warp', cursive;
+}
+.page-footer{
+    border-top: 4px double black;
+    color: #311b01;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color:#fcd19d;
+}
+.bg-custom{
+    background-color: #fcd19d;
+    height: 380px;
+    border: double 4px black;
+    border-radius: 25px;
+}
+.form-btn{
+    font-family: 'Tilt Warp', cursive;
+    background-color: #7a4c14;
+    color: #fcd19d;
+    padding: 5px 25px 5px 25px;
+    border-radius: 25px;
+}
+.enquiry-form{
+    max-width: 600px;
 }
