--- a/styles/comfort.css
+++ b/styles/comfort.css
@@ -10,7 +10,21 @@
 }
 hr.solid {
     border-top: 3px solid #8a8a8a;
-  }
+}
+body{
+    position: relative;
+}
+main{
+    padding-bottom: 120px;
+}
+.page-footer{
+    border-top: 4px double black;
+    color: #311b01;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color:#fcd19d;
+}
 .title-desc{
     font-family: 'Roboto', sans-serif;
     font-weight:600;
