--- a/styles/mommies.css
+++ b/styles/mommies.css
@@ -23,8 +23,9 @@
     width: 100%;
     background-color:#fcd19d;
 }
-.bg-custom{
+.bg-form{
     background-color: #fcd19d;
+    height: 380px;
     border: double 4px black;
     border-radius: 25px;
 }
